# llama-index-starter

./: README.md  pyproject.toml  starter.py
storage/: default__vector_store.json  docstore.json  index_store.json
